# multicompress

./: .gitignore  LICENSE  README.md  build_exe.py  cli.py  conftest.py  install_context_menu.py  installer.iss  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: generate_assets.py  index.html
src/compressor/: __init__.py  archive_compressor.py  audio_compressor.py  config.py  engine.py  ffmpeg_runner.py  history.py  image_compressor.py  logsetup.py  pdf_compressor.py  presets.py  utils.py  video_compressor.py
src/gui/: __init__.py  app.py
tests/: test_compressors.py  test_engine.py  test_target_and_validate.py  test_utils.py
